--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainPage.MainPageCalendarActivity"/>
+        <activity android:name=".MainPage.MainPageMenuActivity"/>
     </application>
 
 </manifest>
