refact : 패키지 정리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.study.wisestudy">
+    package="com.wisestudy.wisestudy">
 
     <application
         android:allowBackup="true"
@@ -9,13 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainPage.MainActivity">
+        <activity android:name="com.wisestudy.wisestudy.com.study.MainPage.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LandingPage.LadingPageLoginActivity"/>
+        <activity android:name="com.wisestudy.wisestudy.com.study.landingPage.LadingPageLoginActivity"/>
 
 
     </application>
