--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-    android:theme="@style/AppTheme">
-    <activity android:name="com.wisestudy.login.activity.LoginActivity"/>
-        <activity android:name="com.wisestudy.landing.activity.LandingActivity">
+        android:theme="@style/AppTheme"
+        android:name="com.wisestudy.login.activity.LoginInit">
+        <activity android:name="com.wisestudy.login.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name="com.wisestudy.user.activity.UserCreateActivity"></activity>
+        <activity android:name="com.wisestudy.landing.activity.LandingActivity"></activity>
         <activity android:name="com.wisestudy.planner.activity.PlannerActivity"></activity>
 
         <meta-data
