--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wisestudy.wisestudy">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,19 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name="com.wisestudy.login.activity.LoginInit">
-        <activity android:name="com.wisestudy.login.activity.LoginActivity">
+        <activity android:name="com.wisestudy.landing.activity.LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name="com.wisestudy.user.activity.UserCreateActivity"></activity>
-        <activity android:name="com.wisestudy.landing.activity.LandingActivity"></activity>
+        <activity android:name="com.wisestudy.login.activity.LoginActivity"></activity>
         <activity android:name="com.wisestudy.planner.activity.PlannerActivity"></activity>
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
-            android:value="EnRKgrRQI8ZTCJiMUqYt7p8NrvU=" />
+            android:value="861c70923d0f32c7b649ebe2fa8fedfd" />
     </application>
 
 </manifest>
