feat(#20) : 기존 메인페이지 주석 제거 삭제된 파일 복구 삭제된 라이브러리 복구

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
     // 카카오 로그인
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.29.0'
 
@@ -42,4 +42,5 @@ dependencies {
 
     // 카카오내비
     implementation group: 'com.kakao.sdk', name: 'kakaonavi', version: '1.29.0'
+    implementation 'com.android.support:design:28.0.0'
 }
