--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,19 +27,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+
 
     // 카카오 로그인
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.29.0'
 
-    // 카카오톡
-    implementation group: 'com.kakao.sdk', name: 'kakaotalk', version: '1.29.0'
-
-    // 카카오스토리
-    implementation group: 'com.kakao.sdk', name: 'kakaostory', version: '1.29.0'
-
-    // 카카오링크
-    implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.29.0'
-
-    // 카카오내비
-    implementation group: 'com.kakao.sdk', name: 'kakaonavi', version: '1.29.0'
 }
