feat(#28) : complete groupleader create study UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,18 @@
         android:theme="@style/mAppTheme"
         android:name="com.wisestudy.login.activity.LoginInit">
         <activity android:name="com.wisestudy.landing.activity.LandingActivity">
-        </activity>
-        <activity android:name="com.wisestudy.user.activity.UserCreateActivity"></activity>
-        <activity android:name="com.wisestudy.login.activity.LoginActivity"></activity>
-        <activity android:name="com.wisestudy.planner.activity.PlannerActivity"></activity>
-
-        <activity android:name="com.wisestudy.groupleader.activity.GroupManagement">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.wisestudy.user.activity.UserCreateActivity"></activity>
+        <activity android:name="com.wisestudy.login.activity.LoginActivity"></activity>
+        <activity android:name="com.wisestudy.planner.activity.PlannerActivity"></activity>
+
+        <activity android:name="com.wisestudy.groupleader.activity.GroupManagementActivity">
+        </activity>
+        <activity android:name="com.wisestudy.groupleader.activity.CreateStudyActivity"/>
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
