--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,21 @@
         <activity android:name="com.wisestudy.landing.activity.LandingActivity">
         </activity>
         <activity android:name="com.wisestudy.user.activity.UserCreateActivity"></activity>
-        <activity android:name="com.wisestudy.login.activity.LoginActivity">
-
-        </activity>
+        <activity android:name="com.wisestudy.login.activity.LoginActivity"></activity>
         <activity android:name="com.wisestudy.planner.activity.PlannerActivity"></activity>
-
-        <activity android:name="com.wisestudy.groupleader.activity.GroupManagement">
+        <activity android:name="com.wisestudy.nongroup.activity.StudySearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name="com.wisestudy.nongroup.activity.NonGruopActivity">
+
+        </activity>
+
+        <activity android:name="com.wisestudy.groupleader.activity.GroupManagement">
+
         </activity>
 
         <meta-data
