--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
     implementation 'de.hdodenhof:circleimageview:3.0.1'
-
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'me.relex:circleindicator:1.2.2'
 
