--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/mAppTheme"
+        android:usesCleartextTraffic="true"
         android:name="com.wisestudy.application.LoginInit">
 
         <activity android:name="com.wisestudy.landing.activity.LandingActivity">
@@ -19,22 +20,17 @@
         <activity android:name="com.wisestudy.login.activity.LoginActivity"></activity>
         <activity android:name="com.wisestudy.planner.activity.PlannerActivity"></activity>
         <activity android:name="com.wisestudy.nongroup.activity.StudySearchActivity">
-
-        </activity>
-        <activity android:name="com.wisestudy.nongroup.activity.NonGruopActivity"/>
-        <activity android:name="com.wisestudy.groupleader.activity.GroupManagementActivity">
-        </activity>
-        <activity android:name="com.wisestudy.groupleader.activity.CreateStudyActivity">
-        </activity>
-        <activity android:name="com.wisestudy.groupleader.activity.CalendarModifyActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.wisestudy.groupleader.activity.GroupManagement">
+        <activity android:name="com.wisestudy.nongroup.activity.NonGroupActivity"/>
+        <activity android:name="com.wisestudy.groupleader.activity.GroupManagementActivity">
+        </activity>
+        <activity android:name="com.wisestudy.groupleader.activity.CreateStudyActivity">
+        </activity>
+        <activity android:name="com.wisestudy.groupleader.activity.CalendarModifyActivity">
 
         </activity>
 
