--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/libDaumMapAndroid.jar')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -41,13 +43,16 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 
+
     // 카카오 로그인
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.29.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
 
 }
