--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.wisestudy.nongroup.activity.NonGroupActivity"/>
+        <activity android:name="com.wisestudy.nongroup.activity.NonGroupUserDetail"/>
 
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderDetailActivity"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupManagementActivity"/>
