--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,7 @@
         android:usesCleartextTraffic="true"
         android:name="com.wisestudy.application.LoginInit">
 
-        <activity android:name="com.wisestudy.landing.activity.LandingActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name="com.wisestudy.landing.activity.LandingActivity"/>
 
         <activity android:name="com.wisestudy.login.activity.LoginActivity"/>
 
@@ -29,15 +24,20 @@
 
         <activity android:name="com.wisestudy.nongroup.activity.NonGroupStudySearchActivity"/>
         <activity android:name="com.wisestudy.nongroup.activity.NonGroupUserDetail"/>
-
+        <activity android:name="com.wisestudy.nongroup.activity.NonGroupMember"/>
         <activity android:name="com.wisestudy.user.activity.UserCreateStudyActivity"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderCreatePlannerActivity"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderDetailActivity"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderManagementActivity"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderManagementGroupMember"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderPresentApplicationActivity"/>
-
-        <activity android:name="com.wisestudy.user.activity.UserActivity"/>
+        <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderManagementSchedule"/>
+        <activity android:name="com.wisestudy.user.activity.UserActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name="com.wisestudy.user.activity.UserModifyActivity"/>
         <activity android:name="com.wisestudy.user.activity.UserDetailActivity"/>
 
