--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
 
         <activity android:name="com.wisestudy.landing.activity.LandingActivity"/>
 
-        <activity android:name="com.wisestudy.login.activity.LoginActivity"/>
+        <activity android:name="com.wisestudy.login.activity.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name="com.wisestudy.planner.activity.PlannerActivity"/>
         <activity android:name="com.wisestudy.planner.activity.PlannerDetailActivity"/>
@@ -32,12 +37,7 @@
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderManagementGroupMember"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderPresentApplicationActivity"/>
         <activity android:name="com.wisestudy.groupleader.activity.GroupLeaderManagementSchedule"/>
-        <activity android:name="com.wisestudy.user.activity.UserActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name="com.wisestudy.user.activity.UserActivity"/>
         <activity android:name="com.wisestudy.user.activity.UserModifyActivity"/>
         <activity android:name="com.wisestudy.user.activity.UserDetailActivity"/>
 
